# ot-harjoitustyo

./: README.md
dokumentaatio/: README.md  vaatimusmaarittely.md
harjoitustyo/: .coveragerc  .gitignore  .pylintrc  README.md  degree_ids.md  pyproject.toml  schema.sql  tasks.py
harjoitustyo/dokumentaatio/: apologia.md  arkkitehtuuri.md  changelog.md  degree_ids.md  kayttoohje.md  testidokumentti.md  tiedetyt_bugit.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: CourseRepository.py  UserRepository.py  courses.py  database_connection.py  gui.py  index.py  initialize_database.py  session.py
harjoitustyo/src/gui/: course_operations_view.py  login_view.py  main_view.py  register_view.py  ui.py
harjoitustyo/src/repositories/: CourseRepository.py  UserRepository.py
harjoitustyo/src/services/: services.py
harjoitustyo/src/tests/: database_test.py  repositories_test.py  services_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  machine.md  monopoli.md
