[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Rasmus S <rasmus.salmela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
